--- a/formulaire.html
+++ b/formulaire.html
@@ -84,7 +84,7 @@
   .prereq-section{background:var(--prereq-bg);padding:18px;border-radius:12px;margin-top:24px;border-left:4px solid var(--primary);margin-bottom: 48px;}
   .error{color:#dc2626;margin-top:8px;font-weight:500}
   .small{font-size:13px;color:var(--muted);margin-top:8px;line-height:1.5}
-  .hidden{display:none}
+  .hidden{visibility:hidden;height:0;overflow:hidden;pointer-events:none}
   .success-banner{background:#d1fae5;border:2px solid #10b981;padding:24px;border-radius:12px;margin-top:24px;text-align:center}
   .section-number{background:var(--primary);color:white;min-width:28px;width:28px;height:28px;border-radius:50%;display:inline-flex;align-items:center;justify-content:center;font-size:14px;font-weight:700;flex-shrink:0}
 
