--- a/formulaire.html
+++ b/formulaire.html
@@ -1264,7 +1264,7 @@ function rechercherCommune() {
         
         return `
           <div 
-            onclick="ajouterCommuneManuellement('${nomEchape}')" 
+              onclick="ajouterCommuneManuellement('${nomEchape}')"
             style="
               padding: 12px; 
               cursor: pointer; 
@@ -1277,7 +1277,7 @@ function rechercherCommune() {
             onmouseover="this.style.background='#f0f9ff'"
             onmouseout="this.style.background='white'"
           >
-            <span style="font-weight: 600; color: #0f1724; font-size: 14px;">${nomComplet}</span>
+          <span style="font-weight: 600; color: #0f1724; font-size: 14px;" title="">${nomComplet}</span>
             <span style="color: #6b7280; font-size: 12px; white-space: nowrap; margin-left: 12px;">${deptCode} - ${deptNomEchape}</span>
           </div>
         `;
