--- a/formulaire.html
+++ b/formulaire.html
@@ -422,7 +422,7 @@
                         Cochez/décochez les communes à inclure dans votre zone d'intervention
                       </div>
                       <div style="background: white; border: 2px solid #e6eef6; border-radius: 8px; padding: 8px; margin-top: 8px;">
-                        <div id="listeCommunesCheckboxes" style="max-height: 300px; overflow-y: auto;">
+                        <div id="listeCommunesCheckboxes" style="max-height: 300px; overflow-y: auto;" title="">
                           <p style="color: #999; text-align: center; padding: 20px; margin: 0;">
                             Chargement...
                           </p>
@@ -1174,10 +1174,9 @@ function genererCheckboxesCommunes() {
       ? etatCheckboxes[communeEchapee]  // Restaurer l'état précédent
       : true;  // Nouvelle commune = cochée par défaut
     
-    return `
-    
-    <div style="padding: 10px 8px; border-bottom: 1px solid #f3f4f6; display: flex; align-items: center;transition: background 0.2s;" onmouseover="this.style.background='#f9fafb'" onmouseout="this.style.background='white'">
-        <input 
+        return `
+      <div style="padding: 10px 8px; border-bottom: 1px solid #f3f4f6; display: flex; align-items: center; transition: background 0.2s;" title="" onmouseover="this.style.background='#f9fafb'" onmouseout="this.style.background='white'">        
+      <input 
           type="checkbox" 
           id="commune_${index}" 
           value="${communeEchapee}" 
