--- a/formulaire.html
+++ b/formulaire.html
@@ -372,6 +372,10 @@
   placeholder="Ex: Nancy, Paris, Marseille..."
   oninput="rechercherCommuneEnTempsReel()"
   onkeypress="if(event.key==='Enter'){event.preventDefault();}"
+  autocomplete="off"
+  autocorrect="off"
+  autocapitalize="off"
+  spellcheck="false"
   style="
     flex: 1 !important; 
     width: auto !important;
