--- a/formulaire.html
+++ b/formulaire.html
@@ -1014,7 +1014,8 @@ listeDiv.innerHTML = `
   <div style="text-align:center; padding:40px; color:#0ea5a4;">
     <div style="font-size:48px; margin-bottom:16px;">⏳</div>
     <div style="font-size:18px; font-weight:600; margin-bottom:8px;">Calcul en cours...</div>
-    <div style="font-size:14px; color:#6b7280;">Analyse des communes accessibles selon votre zone d'intervention</div>
+    <div style="font-size:14px; color:#6b7280;">Recherche des communes accessibles dans votre zone d'intervention<br>
+    Un instant, nous analysons votre secteur)</div>
   </div> 
 `;  
 infoDiv.innerHTML = '<span style="color:#0ea5a4; font-weight:600;">🔄 Calcul en cours, veuillez patienter...</span>';
