--- a/formulaire.html
+++ b/formulaire.html
@@ -1936,7 +1936,7 @@ document.getElementById("rayonMetro")?.addEventListener("change", function() {
     // 🆕 RÉINITIALISER LE MESSAGE EXPLICATIF
     const messageExplicatif = document.getElementById('messageExplicatif');
     if (messageExplicatif) {
-      messageExplicatif.innerHTML = '💡 Cette liste est une <strong>estimation automatique</strong> basée sur votre temps de trajet / rayon.';
+      messageExplicatif.innerHTML = '💡 Cette liste est une <strong>estimation automatique</strong> basée sur un rayon en km.';
       messageExplicatif.style.color = '#6b7280';
       messageExplicatif.style.fontWeight = 'normal';
       messageExplicatif.style.fontStyle = 'italic';
@@ -1963,7 +1963,7 @@ document.getElementById("rayonKm")?.addEventListener("change", function() {
     // 🆕 RÉINITIALISER LE MESSAGE EXPLICATIF
     const messageExplicatif = document.getElementById('messageExplicatif');
     if (messageExplicatif) {
-      messageExplicatif.innerHTML = '💡 Cette liste est une <strong>estimation automatique</strong> basée sur votre temps de trajet / rayon.';
+      messageExplicatif.innerHTML = '💡 Cette liste est une <strong>estimation automatique</strong> basée sur un rayon en km.';
       messageExplicatif.style.color = '#6b7280';
       messageExplicatif.style.fontWeight = 'normal';
       messageExplicatif.style.fontStyle = 'italic';
