--- a/formulaire.html
+++ b/formulaire.html
@@ -518,7 +518,7 @@
                 
                 <!-- Message explicatif (change selon le mode) -->
                 <div id="messageExplicatif" class="small" style="margin-top: 12px; color: #6b7280; font-style: italic;">
-                    💡 Cette liste est une <strong>estimation automatique</strong> basée sur votre temps de trajet / rayon.
+                  💡 Cette liste est calculée approximativement. <strong>Certaines communes accessibles peuvent manquer</strong>. Utilisez <strong>"Modifier"</strong> pour ajuster si nécessaire.
                 </div>
               </div>
             </div>
