--- a/formulaire.html
+++ b/formulaire.html
@@ -1890,7 +1890,7 @@ departSelect.addEventListener('change', e => {
     // 🆕 RÉINITIALISER LE MESSAGE EXPLICATIF
     const messageExplicatif = document.getElementById('messageExplicatif');
     if (messageExplicatif) {
-      messageExplicatif.innerHTML = '💡 Cette liste est une <strong>estimation automatique</strong> basée sur votre temps de trajet / rayon.';
+      messageExplicatif.innerHTML = '💡 Cette liste est calculée approximativement. <strong>Certaines communes accessibles peuvent manquer</strong>. Utilisez <strong>"Modifier"</strong> pour ajuster si nécessaire.';
       messageExplicatif.style.color = '#6b7280';
       messageExplicatif.style.fontWeight = 'normal';
       messageExplicatif.style.fontStyle = 'italic';
@@ -1923,7 +1923,7 @@ communeSelect.addEventListener("change", function() {
     // 🆕 RÉINITIALISER LE MESSAGE EXPLICATIF
     const messageExplicatif = document.getElementById('messageExplicatif');
     if (messageExplicatif) {
-      messageExplicatif.innerHTML = '💡 Cette liste est une <strong>estimation automatique</strong> basée sur votre temps de trajet / rayon.';
+      messageExplicatif.innerHTML = '💡 Cette liste est calculée approximativement. <strong>Certaines communes accessibles peuvent manquer</strong>. Utilisez <strong>"Modifier"</strong> pour ajuster si nécessaire.';
       messageExplicatif.style.color = '#6b7280';
       messageExplicatif.style.fontWeight = 'normal';
       messageExplicatif.style.fontStyle = 'italic';
