--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
       <h1> Accueil</h1>
       <nav class="nav-links">
         <a href="formulaire.html"> Questionnaire</a>
+        <a href="faq.html"> FAQ</a>
         <a href="mentions.html"> Mentions légales</a>
       </nav>
     </div>
@@ -290,6 +291,7 @@
     <footer>
       <p>
         <a href="formulaire.html">Formulaire</a> • 
+        <a href="faq.html">FAQ</a> • 
         <a href="mentions.html">Mentions légales</a> • 
         <a href="mentions.html#confidentialite">Politique de confidentialité</a> • 
         <a href="mentions.html#contact">Contact</a>
