--- a/mentions.html
+++ b/mentions.html
@@ -123,6 +123,7 @@ footer a:hover{
       <nav class="nav-links">
         <a href="index.html"> Accueil</a>
         <a href="formulaire.html"> Questionnaire</a>
+        <a href="faq.html"> FAQ</a>
       </nav>
     </div>
 
@@ -305,6 +306,7 @@ footer a:hover{
       <p>
         <a href="index.html">Accueil</a> • 
         <a href="formulaire.html">Formulaire</a> • 
+        <a href="faq.html">FAQ</a> • 
         <a href="mentions.html#confidentialite">Politique de confidentialité</a> • 
         <a href="mentions.html#contact">Contact</a>
       </p>
