--- a/formulaire.html
+++ b/formulaire.html
@@ -99,10 +99,11 @@
 <body>
 <div class="wrap">
   <div class="nav-header">
-    <h1>📋 Questionnaire de référencement</h1>
+    <h1>Questionnaire de référencement</h1>
     <nav class="nav-links">
-      <a href="index.html">🏠 Accueil</a>
-      <a href="mentions.html">📋 Mentions légales</a>
+      <a href="index.html">Accueil</a>
+      <a href="faq.html">FAQ</a>
+      <a href="mentions.html">Mentions légales</a>
     </nav>
   </div>
   
@@ -623,6 +624,7 @@
   <footer>
     <p>
       <a href="index.html">Accueil</a> • 
+      <a href="faq.html">FAQ</a> • 
       <a href="mentions.html">Mentions légales</a> • 
       <a href="mentions.html#confidentialite">Politique de confidentialité</a> • 
       <a href="mentions.html#contact">Contact</a>
