--- a/faq.html
+++ b/faq.html
@@ -141,11 +141,11 @@
   <div class="wrap">
 
     <div class="nav-header">
-      <h1>❓ FAQ</h1>
+      <h1>FAQ</h1>
       <nav class="nav-links">
-        <a href="index.html">🏠 Accueil</a>
-        <a href="formulaire.html">📝 Questionnaire</a>
-        <a href="mentions.html">📄 Mentions légales</a>
+        <a href="index.html">Accueil</a>
+        <a href="formulaire.html">Questionnaire</a>
+        <a href="mentions.html">Mentions légales</a>
       </nav>
     </div>
 
