--- a/formulaire.html
+++ b/formulaire.html
@@ -21,9 +21,12 @@
 
   .nav-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:32px;padding-bottom:16px;border-bottom:2px solid #e6eef6}
   .nav-header h1{margin:0;font-size:24px;color:#0f1724}
-  .nav-links{display:flex;gap:16px;align-items:center}
-  .nav-links a{color:var(--muted);text-decoration:none;font-size:14px;font-weight:600;transition:color 0.2s}
-  .nav-links a:hover{color:var(--primary)}
+  
+  .nav-links{display:flex;gap:8px;align-items:center;}
+  .nav-links a{color:var(--muted);text-decoration:none;font-size:14px;font-weight:600;padding:8px 16px;border-radius:8px;transition:all 0.2s;position:relative;}
+  .nav-links a:hover{color:var(--primary);background:rgba(14, 165, 164, 0.08);}
+  .nav-links a.active{color:var(--primary);background:rgba(14, 165, 164, 0.12);font-weight:700;}
+  .nav-links a.active::after{content:'';position:absolute;bottom:4px;left:16px;right:16px;height:2px;background:var(--primary);border-radius:2px;}
 
   h2{margin:0 0 16px;color:var(--muted);font-size:17px;font-weight:600;line-height:1.6}
   h3{margin:24px 0 12px;font-size:16px;font-weight:700;color:#0f1724}
@@ -102,6 +105,7 @@
     <h1>Questionnaire de référencement</h1>
     <nav class="nav-links">
       <a href="index.html">Accueil</a>
+      <a href="index.html" class="active">Formulaire</a>
       <a href="faq.html">FAQ</a>
       <a href="mentions.html">Mentions légales</a>
     </nav>
