--- a/mentions.html
+++ b/mentions.html
@@ -24,19 +24,41 @@
     font-size:22px;
     color:#0f1724;
   }
-  .nav-links{
-    display:flex;
-    gap:16px;
-    align-items:center;
-  }
-  .nav-links a{
-    color:var(--muted);
-    text-decoration:none;
-    font-size:14px;
-    font-weight:600;
-    transition:color 0.2s;
-  }
-  .nav-links a:hover{color:var(--primary);}
+  
+  ..nav-links{
+  display:flex;
+  gap:8px;
+  align-items:center;
+}
+.nav-links a{
+  color:var(--muted);
+  text-decoration:none;
+  font-size:14px;
+  font-weight:600;
+  padding:8px 16px;
+  border-radius:8px;
+  transition:all 0.2s;
+  position:relative;
+}
+.nav-links a:hover{
+  color:var(--primary);
+  background:rgba(14, 165, 164, 0.08);
+}
+.nav-links a.active{
+  color:var(--primary);
+  background:rgba(14, 165, 164, 0.12);
+  font-weight:700;
+}
+.nav-links a.active::after{
+  content:'';
+  position:absolute;
+  bottom:4px;
+  left:16px;
+  right:16px;
+  height:2px;
+  background:var(--primary);
+  border-radius:2px;
+}
 
   h1{margin:0 0 8px;font-size:28px;color:#0f1724;font-weight:700}
   .date{color:var(--muted);font-size:14px;margin-bottom:32px}
@@ -121,9 +143,10 @@ footer a:hover{
     <div class="nav-header">
       <h1> Mentions légales</h1>
       <nav class="nav-links">
-        <a href="index.html"> Accueil</a>
-        <a href="formulaire.html"> Questionnaire</a>
+        <a href="index.html">Accueil</a>
+        <a href="formulaire.html">Formulaire</a>
         <a href="faq.html"> FAQ</a>
+        <a href="mentions.html">Mentions légales</a>
       </nav>
     </div>
 
