--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <div class="nav-header">
       <h1> Accueil</h1>
       <nav class="nav-links">
-        <a href="formulaire.html" class="active">Accueil</a>
+        <a href="index.html" class="active">Accueil</a>
         <a href="formulaire.html">Formulaire</a>
         <a href="faq.html">FAQ</a>
         <a href="mentions.html">Mentions légales</a>
