--- a/formulaire.html
+++ b/formulaire.html
@@ -105,7 +105,7 @@
     <h1>Questionnaire de référencement</h1>
     <nav class="nav-links">
       <a href="index.html">Accueil</a>
-      <a href="index.html" class="active">Formulaire</a>
+      <a href="formulaire.html" class="active">Formulaire</a>
       <a href="faq.html">FAQ</a>
       <a href="mentions.html">Mentions légales</a>
     </nav>
