--- a/mentions.html
+++ b/mentions.html
@@ -19,17 +19,19 @@
     padding-bottom:16px;
     border-bottom:2px solid #e6eef6;
   }
+  
   .nav-header h1{
     margin:0;
     font-size:22px;
     color:#0f1724;
   }
   
-  ..nav-links{
+  .nav-links{
   display:flex;
   gap:8px;
   align-items:center;
 }
+  
 .nav-links a{
   color:var(--muted);
   text-decoration:none;
