--- a/mentions.html
+++ b/mentions.html
@@ -147,8 +147,8 @@ footer a:hover{
       <nav class="nav-links">
         <a href="index.html">Accueil</a>
         <a href="formulaire.html">Formulaire</a>
-        <a href="faq.html"> FAQ</a>
-        <a href="mentions.html">Mentions légales</a>
+        <a href="faq.html">FAQ</a>
+        <a href="mentions.html" class="active">Mentions légales</a>
       </nav>
     </div>
 
