--- a/index.html
+++ b/index.html
@@ -31,72 +31,19 @@
     margin-bottom:24px;
   }
 
-  /* === Navigation Header (identique à la page du formulaire) === */
-  .nav-header{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    margin-bottom:32px;
-    padding-bottom:16px;
-    border-bottom:2px solid #e6eef6;
-  }
-  .nav-header h1{
-    margin:0;
-    font-size:22px;
-    color:#0f1724;
-  }
+  /* === Navigation Header === */
+  .nav-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:32px;padding-bottom:16px;border-bottom:2px solid #e6eef6;}
+  .nav-header h1{margin:0;font-size:22px;color:#0f1724;}
 
-  .nav-links{
-  display:flex;
-  gap:8px;
-  align-items:center;
-}
-.nav-links a{
-  color:var(--muted);
-  text-decoration:none;
-  font-size:14px;
-  font-weight:600;
-  padding:8px 16px;
-  border-radius:8px;
-  transition:all 0.2s;
-  position:relative;
-}
-.nav-links a:hover{
-  color:var(--primary);
-  background:rgba(14, 165, 164, 0.08);
-}
-.nav-links a.active{
-  color:var(--primary);
-  background:rgba(14, 165, 164, 0.12);
-  font-weight:700;
-}
-.nav-links a.active::after{
-  content:'';
-  position:absolute;
-  bottom:4px;
-  left:16px;
-  right:16px;
-  height:2px;
-  background:var(--primary);
-  border-radius:2px;
-}
+  .nav-links{display:flex;gap:8px;align-items:center;}
+  .nav-links a{color:var(--muted);text-decoration:none;font-size:14px;font-weight:600;padding:8px 16px;border-radius:8px;transition:all 0.2s;position:relative;}
+  .nav-links a:hover{color:var(--primary);background:rgba(14, 165, 164, 0.08);}
+  .nav-links a.active{color:var(--primary);background:rgba(14, 165, 164, 0.12);font-weight:700;}
+  .nav-links a.active::after{content:'';position:absolute;bottom:4px;left:16px;right:16px;height:2px;background:var(--primary);border-radius:2px;}
   
-  .hero{
-    text-align:center;
-    padding:40px 0 32px;
-  }
-  .hero h1{
-    margin:0 0 16px;
-    font-size:32px;
-    color:#0f1724;
-    font-weight:700;
-  }
-  .hero .subtitle{
-    font-size:18px;
-    color:var(--muted);
-    margin:0 0 32px;
-    line-height:1.6;
-  }
+  .hero{text-align:center;padding:40px 0 32px;}
+  .hero h1{margin:0 0 16px;font-size:32px;color:#0f1724;font-weight:700;}
+  .hero .subtitle{font-size:18px;color:var(--muted);margin:0 0 32px;line-height:1.6;}
 
   .cta-button{
     display:inline-block;
