--- a/mentions.html
+++ b/mentions.html
@@ -11,56 +11,15 @@
   .card{background:var(--card);border-radius:16px;padding:32px 36px;box-shadow:0 8px 30px rgba(2,6,23,0.06);margin-bottom:24px}
   
   /* === Navigation Header (identique aux autres pages) === */
-  .nav-header{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    margin-bottom:32px;
-    padding-bottom:16px;
-    border-bottom:2px solid #e6eef6;
-  }
+  .nav-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:32px;padding-bottom:16px;border-bottom:2px solid #e6eef6;}
   
-  .nav-header h1{
-    margin:0;
-    font-size:22px;
-    color:#0f1724;
-  }
+  .nav-header h1{margin:0;font-size:22px;color:#0f1724;}
   
-  .nav-links{
-  display:flex;
-  gap:8px;
-  align-items:center;
-}
-  
-.nav-links a{
-  color:var(--muted);
-  text-decoration:none;
-  font-size:14px;
-  font-weight:600;
-  padding:8px 16px;
-  border-radius:8px;
-  transition:all 0.2s;
-  position:relative;
-}
-.nav-links a:hover{
-  color:var(--primary);
-  background:rgba(14, 165, 164, 0.08);
-}
-.nav-links a.active{
-  color:var(--primary);
-  background:rgba(14, 165, 164, 0.12);
-  font-weight:700;
-}
-.nav-links a.active::after{
-  content:'';
-  position:absolute;
-  bottom:4px;
-  left:16px;
-  right:16px;
-  height:2px;
-  background:var(--primary);
-  border-radius:2px;
-}
+  .nav-links{display:flex;gap:8px;align-items:center;}
+  .nav-links a{color:var(--muted);text-decoration:none;font-size:14px;font-weight:600;padding:8px 16px;border-radius:8px;transition:all 0.2s;position:relative;}
+  .nav-links a:hover{color:var(--primary);background:rgba(14, 165, 164, 0.08);}
+  .nav-links a.active{color:var(--primary);background:rgba(14, 165, 164, 0.12);font-weight:700;}
+  .nav-links a.active::after{content:'';position:absolute;bottom:4px;left:16px;right:16px;height:2px;background:var(--primary);border-radius:2px;}
 
   h1{margin:0 0 8px;font-size:28px;color:#0f1724;font-weight:700}
   .date{color:var(--muted);font-size:14px;margin-bottom:32px}
