--- a/faq.html
+++ b/faq.html
@@ -40,49 +40,21 @@
     border-bottom:2px solid #e6eef6;
   }
   .nav-header h1{margin:0;font-size:22px;color:#0f1724;}
-  .nav-links{display:flex;gap:16px;align-items:center;}
-  .nav-links a{
-    color:var(--muted);
-    text-decoration:none;
-    font-size:14px;
-    font-weight:600;
-    transition:color 0.2s;
-  }
-  .nav-links a:hover{color:var(--primary);}
+  
+  .nav-links{display:flex;gap:8px;align-items:center;}
+  .nav-links a{color:var(--muted);text-decoration:none;font-size:14px;font-weight:600;padding:8px 16px;border-radius:8px;transition:all 0.2s;position:relative;}
+  .nav-links a:hover{color:var(--primary);background:rgba(14, 165, 164, 0.08);}
+  .nav-links a.active{color:var(--primary);background:rgba(14, 165, 164, 0.12);font-weight:700;}
+  .nav-links a.active::after{content:'';position:absolute;bottom:4px;left:16px;right:16px;height:2px;background:var(--primary);border-radius:2px;}
 
   h1{margin:0 0 16px;font-size:32px;color:#0f1724;font-weight:700}
   .subtitle{color:var(--muted);font-size:16px;margin-bottom:32px}
 
-  .faq-category{
-    margin-bottom:32px;
-  }
-  
-  .faq-category h2{
-    margin:0 0 20px;
-    font-size:22px;
-    color:#0f1724;
-    font-weight:700;
-    border-bottom:3px solid var(--primary);
-    padding-bottom:8px;
-  }
-
-  .faq-item{
-    background:var(--section-bg);
-    border-left:4px solid var(--primary);
-    padding:20px 24px;
-    border-radius:8px;
-    margin-bottom:16px;
-  }
-
-  .faq-question{
-    font-weight:700;
-    font-size:16px;
-    color:#0f1724;
-    margin:0 0 12px;
-    display:flex;
-    align-items:start;
-    gap:12px;
-  }
+  .faq-category{margin-bottom:48px;}
+  .faq-category h2{margin:0 0 24px;font-size:22px;color:var(--primary);font-weight:700;padding-bottom:0;border-bottom:none;}
+  .faq-item{background:white;border-left:none;padding:0 0 24px 0;border-radius:0;margin-bottom:24px;border-bottom:1px solid #e5e7eb;}
+  .faq-item:last-child{border-bottom:none;}
+  .faq-question{font-weight:700;font-size:18px;color:var(--primary);margin:0 0 12px;display:block;}
 
   .faq-answer{
     color:#0f1724;
@@ -145,6 +117,7 @@
       <nav class="nav-links">
         <a href="index.html">Accueil</a>
         <a href="formulaire.html">Questionnaire</a>
+        <a href="faq.html"class="active">FAQ</a>
         <a href="mentions.html">Mentions légales</a>
       </nav>
     </div>
