--- a/faq.html
+++ b/faq.html
@@ -50,18 +50,13 @@
   h1{margin:0 0 16px;font-size:32px;color:#0f1724;font-weight:700}
   .subtitle{color:var(--muted);font-size:16px;margin-bottom:32px}
 
-  .faq-category{margin-bottom:48px;}
-  .faq-category h2{margin:0 0 24px;font-size:22px;color:var(--primary);font-weight:700;padding-bottom:0;border-bottom:none;}
+  .faq-category{margin-bottom:48px;background:var(--section-bg);padding:28px;border-radius:12px;border:2px solid #e5e7eb;}
+  .faq-category h2{margin:0 0 24px;font-size:22px;color:var(--primary);font-weight:700;padding-bottom:12px;border-bottom:2px solid #e5e7eb;}
   .faq-item{background:white;border-left:none;padding:0 0 24px 0;border-radius:0;margin-bottom:24px;border-bottom:1px solid #e5e7eb;}
   .faq-item:last-child{border-bottom:none;}
   .faq-question{font-weight:700;font-size:18px;color:var(--primary);margin:0 0 12px;display:block;}
 
-  .faq-answer{
-    color:#0f1724;
-    font-size:15px;
-    margin:0;
-    line-height:1.6;
-  }
+  .faq-answer{color:#0f1724;font-size:15px;margin:0;line-height:1.6;text-align:justify;}
 
   .faq-answer ul{
     margin:12px 0;
