--- a/faq.html
+++ b/faq.html
@@ -49,10 +49,12 @@
 
   h1{margin:0 0 16px;font-size:32px;color:#0f1724;font-weight:700}
   .subtitle{color:var(--muted);font-size:16px;margin-bottom:32px}
-
-  .faq-category{margin-bottom:48px;background:var(--section-bg);padding:28px;border-radius:12px;border:2px solid #e5e7eb;}
-  .faq-category h2{margin:0 0 24px;font-size:22px;color:var(--primary);font-weight:700;padding-bottom:12px;border-bottom:2px solid #e5e7eb;}
-  .faq-item{background:white;border-left:none;padding:0 0 24px 0;border-radius:0;margin-bottom:24px;border-bottom:1px solid #e5e7eb;}
+  
+  .faq-category{margin-bottom:48px;padding-top:32px;border-top:1px solid #e5e7eb;}
+  .faq-category:first-child{border-top:none;padding-top:0;}
+  .faq-category h2{margin:0 0 24px;font-size:22px;color:var(--primary);font-weight:700;padding-bottom:0;border-bottom:none;display:flex;align-items:center;gap:12px;}
+  .faq-category h2::before{content:attr(data-number);display:inline-flex;align-items:center;justify-content:center;width:36px;height:36px;background:linear-gradient(135deg,var(--primary),var(--primary-dark));color:white;border-radius:8px;font-size:18px;font-weight:700;flex-shrink:0;}
+  .faq-item{background:white;border-left:none;padding:0 0 24px 0;border-radius:0;margin-bottom:24px;border-bottom:1px solid #f3f4f6;}
   .faq-item:last-child{border-bottom:none;}
   .faq-question{font-weight:700;font-size:18px;color:var(--primary);margin:0 0 12px;display:block;}
 
@@ -123,7 +125,7 @@
 
       <!-- INSCRIPTION -->
       <div class="faq-category">
-        <h2>Inscription et accès</h2>
+        <h2 data-number="1">Inscription et accès</h2>
 
         <div class="faq-item">
           <p class="faq-question">
@@ -190,7 +192,7 @@
 
       <!-- MODIFICATION ET GESTION -->
       <div class="faq-category">
-        <h2>Modification et gestion de mon profil</h2>
+        <h2 data-number="2">Modification et gestion de mon profil</h2>
 
         <div class="faq-item">
           <p class="faq-question">
@@ -248,7 +250,7 @@
 
       <!-- ZONE D'INTERVENTION -->
       <div class="faq-category">
-        <h2>Zone d'intervention</h2>
+        <h2 data-number="3">Zone d'intervention</h2>
 
         <div class="faq-item">
           <p class="faq-question">
@@ -296,7 +298,7 @@
 
       <!-- VÉRIFICATION ET VALIDATION -->
       <div class="faq-category">
-        <h2>Vérification et validation</h2>
+        <h2 data-number="4">Vérification et validation</h2>
 
         <div class="faq-item">
           <p class="faq-question">
@@ -339,7 +341,7 @@
 
       <!-- CONTACT ET MESSAGES -->
       <div class="faq-category">
-        <h2>Contact et messages</h2>
+        <h2 data-number="5">Contact et messages</h2>
 
         <div class="faq-item">
           <p class="faq-question">
@@ -392,7 +394,7 @@
 
       <!-- DONNÉES ET CONFIDENTIALITÉ -->
       <div class="faq-category">
-        <h2>Données et confidentialité</h2>
+        <h2 data-number="6">Données et confidentialité</h2
 
         <div class="faq-item">
           <p class="faq-question">
@@ -446,7 +448,7 @@
 
       <!-- PROBLÈMES TECHNIQUES -->
       <div class="faq-category">
-        <h2>Problèmes techniques</h2>
+        <h2 data-number="7">Problèmes techniques</h2>
 
         <div class="faq-item">
           <p class="faq-question">
