--- a/faq.html
+++ b/faq.html
@@ -50,8 +50,8 @@
   h1{margin:0 0 16px;font-size:32px;color:#0f1724;font-weight:700}
   .subtitle{color:var(--muted);font-size:16px;margin-bottom:32px}
   
-  .faq-category{margin-bottom:48px;padding:24px;border-radius:12px;background:linear-gradient(to right,rgba(14,165,164,0.02),rgba(14,165,164,0));border-left:3px solid var(--primary);}
-  .faq-category:first-child{padding-top:24px;}
+  .faq-category{margin-bottom:48px;padding-top:32px;border-top:1px solid #e5e7eb;}
+  .faq-category:first-child{border-top:none;padding-top:0;}
   .faq-category h2{margin:0 0 24px;font-size:22px;color:var(--primary);font-weight:700;padding-bottom:0;border-bottom:none;display:flex;align-items:center;gap:12px;}
   .faq-category h2::before{content:attr(data-number);display:inline-flex;align-items:center;justify-content:center;width:32px;height:32px;background:linear-gradient(135deg,var(--primary),var(--primary-dark));color:white;border-radius:50%;font-size:16px;font-weight:700;flex-shrink:0;}
   .faq-item{background:white;border-left:none;padding:0 0 24px 0;border-radius:0;margin-bottom:24px;border-bottom:1px solid #f3f4f6;}
