--- a/faq.html
+++ b/faq.html
@@ -50,15 +50,15 @@
   h1{margin:0 0 16px;font-size:32px;color:#0f1724;font-weight:700}
   .subtitle{color:var(--muted);font-size:16px;margin-bottom:32px}
   
-  .faq-category{margin-bottom:48px;padding-top:32px;border-top:1px solid #e5e7eb;}
-  .faq-category:first-child{border-top:none;padding-top:0;}
+  .faq-category{margin-bottom:48px;padding:28px;border-radius:10px;border:1px solid #e8eef3;}
+  .faq-category:first-child{padding-top:28px;}
   .faq-category h2{margin:0 0 24px;font-size:22px;color:var(--primary);font-weight:700;padding-bottom:0;border-bottom:none;display:flex;align-items:center;gap:12px;}
   .faq-category h2::before{content:attr(data-number);display:inline-flex;align-items:center;justify-content:center;width:32px;height:32px;background:linear-gradient(135deg,var(--primary),var(--primary-dark));color:white;border-radius:50%;font-size:16px;font-weight:700;flex-shrink:0;}
   .faq-item{background:white;border-left:none;padding:0 0 24px 0;border-radius:0;margin-bottom:24px;border-bottom:1px solid #f3f4f6;}
   .faq-item:last-child{border-bottom:none;}
   .faq-question{font-weight:700;font-size:18px;color:var(--primary);margin:0 0 12px;display:block;}
-
-  .faq-answer{color:#0f1724;font-size:15px;margin:0;line-height:1.6;text-align:justify;hyphens:auto;max-width:850px;}
+  
+  .faq-answer{color:#0f1724;font-size:15px;margin:0;line-height:1.6;text-align:justify;hyphens:auto;max-width:750px;}
   .faq-answer ul{margin:12px 0;padding-left:20px;}
   .faq-answer li{margin:8px 0;}
 
