--- a/faq.html
+++ b/faq.html
@@ -375,7 +375,7 @@
 
       <!-- DONNÉES ET CONFIDENTIALITÉ -->
       <div class="faq-category">
-        <h2 data-number="6">Données et confidentialité</h2
+        <h2 data-number="6">Données et confidentialité</h2>
 
         <div class="faq-item">
           <p class="faq-question">
