--- a/faq.html
+++ b/faq.html
@@ -58,7 +58,7 @@
   .faq-item:last-child{border-bottom:none;}
   .faq-question{font-weight:700;font-size:18px;color:var(--primary);margin:0 0 12px;display:block;}
   
-  .faq-answer{color:#0f1724;font-size:15px;margin:0;line-height:1.6;text-align:justify;hyphens:auto;max-width:750px;}
+  .faq-answer{color:#0f1724;font-size:15px;margin:0;line-height:1.6;text-align:justify;hyphens:auto;/*max-width:750px;*/}
   .faq-answer ul{margin:12px 0;padding-left:20px;}
   .faq-answer li{margin:8px 0;}
 
