--- a/mentions.html
+++ b/mentions.html
@@ -164,7 +164,7 @@
       <h1>Mentions légales</h1>
       <nav class="nav-links">
         <a href="index.html">Accueil</a>
-        <a href="formulaire.html">Questionnaire</a>
+        <a href="formulaire.html">Formulaire</a>
         <a href="faq.html">FAQ</a>
         <a href="mentions.html" class="active">Mentions légales</a>
       </nav>
