--- a/mentions.html
+++ b/mentions.html
@@ -293,7 +293,7 @@
           <li>Leur nom, email et message sont conservés <strong>2 mois maximum</strong></li>
           <li>Ensuite, ces coordonnées sont <strong>supprimées automatiquement le 1er de chaque mois</strong></li>
         </ul>
-        <p style="font-size:14px; color:#6b7280; margin-top:8px;">💡 Note : Le message vous est transmis par email, vous en gardez donc une copie dans votre boîte mail si besoin.</p>
+        <p style="font-size:14px; color:#6b7280; margin-top:8px;" Note : Le message vous est transmis par email, vous en gardez donc une copie dans votre boîte mail si besoin.</p>
         
         <h4 style="margin-top:20px;">Traçabilité de vos actions</h4>
         <p>Pour la sécurité de la plateforme, nous gardons une trace de vos actions pendant <strong>2 mois</strong> :</p>
@@ -302,7 +302,7 @@
           <li>Dates de vos modifications</li>
           <li>Date de suppression (si vous supprimez votre profil)</li>
         </ul>
-        <p style="font-size:14px; color:#6b7280; margin-top:8px;">⚠️ Nous ne gardons PAS le détail de ce qui a été modifié, juste la date et le type d'action (création/modification/suppression).</p>
+        <p style="font-size:14px; color:#6b7280; margin-top:8px;">Nous ne gardons PAS le détail de ce qui a été modifié, juste la date et le type d'action (création/modification/suppression).</p>
         <p>Après 2 mois, cet historique est <strong>supprimé automatiquement le 1er de chaque mois</strong>.</p>
         
         <h4 style="margin-top:20px;">Statistiques anonymes</h4>
