--- a/mentions.html
+++ b/mentions.html
@@ -171,7 +171,7 @@
     </div>
 
     <div class="card">
-      <h1>📄 Mentions légales et politique de confidentialité</h1>
+      <h1>Mentions légales et politique de confidentialité</h1>
       <p class="date">Dernière mise à jour : [DATE À COMPLÉTER]</p>
 
       <div class="section">
