--- a/formulaire.html
+++ b/formulaire.html
@@ -767,30 +767,23 @@ document.querySelectorAll('input[name="modeIntervention"]').forEach(radio => {
 function lockForm() {
   FORM_LOCKED = true;
   
-  // 🔒 MASQUER TOUT LE CONTENU
-  document.querySelector('.wrap').innerHTML = `
-    <div style="max-width: 600px; margin: 80px auto; text-align: center;">
-      <div style="background: #d1fae5; border: 2px solid #10b981; padding: 48px 32px; border-radius: 16px; box-shadow: 0 8px 30px rgba(2,6,23,0.06);">
-        <div style="font-size: 72px; margin-bottom: 24px;">✅</div>
-        <h2 style="margin: 0 0 16px; color: #0f1724; font-size: 28px; font-weight: 700;">Action effectuée avec succès !</h2>
-        <p style="margin: 0 0 20px; color: #059669; font-size: 18px; font-weight: 600;">Vos informations ont été enregistrées.</p>
-        <p style="margin: 0 0 32px; color: #6b7280; font-size: 15px; line-height: 1.6;">
-          Vous avez reçu un email de confirmation.<br>
-          Vous pouvez fermer cette page en toute sécurité.
-        </p>
-        
-        <div style="background: #f0f9ff; border: 2px solid #3b82f6; padding: 20px; border-radius: 12px; margin-top: 24px;">
-          <p style="margin: 0; color: #1e40af; font-size: 14px; font-weight: 600;">
-            💡 Pour modifier à nouveau vos informations, vous devrez redemander un code de vérification.
-          </p>
-        </div>
-        
-        <a href="index.html" style="display: inline-block; margin-top: 24px; padding: 12px 24px; background: #0ea5a4; color: white; text-decoration: none; border-radius: 8px; font-weight: 600; transition: all 0.2s;">
-          ← Retour à l'accueil
-        </a>
-      </div>
-    </div>
-  `;
+  // 🔒 DÉSACTIVER TOUS LES CHAMPS
+  document.querySelectorAll('#form input, #form select, #form textarea').forEach(el => {
+    el.disabled = true;
+  });
+  
+  // 🔒 MASQUER TOUS LES BOUTONS
+  submitBtn.style.display = 'none';
+  editBtn.style.display = 'none';
+  resetBtn.style.display = 'none';
+  
+  // ✅ AFFICHER BANDEAU DE SUCCÈS
+  successBanner.classList.remove('hidden');
+  
+  // 📜 SCROLL
+  setTimeout(() => {
+    successBanner.scrollIntoView({ behavior: 'smooth', block: 'center' });
+  }, 300);
 }
   
 function unlockForm() {
