--- a/faq.html
+++ b/faq.html
@@ -106,7 +106,7 @@
       <h1>Questions Fréquentes</h1>
       <nav class="nav-links">
         <a href="index.html">Accueil</a>
-        <a href="formulaire.html">Questionnaire</a>
+        <a href="formulaire.html">Formulaire</a>
         <a href="faq.html"class="active">FAQ</a>
         <a href="mentions.html">Mentions légales</a>
       </nav>
